added two components (button and select)

--- a/assets/style/color.scss
+++ b/assets/style/color.scss
@@ -1,9 +1,6 @@
 $colors: (
-        colorname: (
-                black: #252525,
-                white: #fff,
-                gold: #E0BEA2,
-                activegold: #CCA88A,
-                gray: #F5F5F5
-        )
+        white: #fff,
+        gold: #E0BEA2,
+        activegold: #CCA88A,
+        black: #F5F5F5
 )
