--- a/assets/style/typography.scss
+++ b/assets/style/typography.scss
@@ -4,7 +4,7 @@
   line-height: normal;
   color: #252525;
 
-  &--14 {
+  &-14 {
     &--bold {
       font-weight: 700;
     }
@@ -12,7 +12,7 @@
     font-weight: 200;
   }
 
-  &--16 {
+  &-16 {
     &--bold {
       font-weight: 700;
     }
@@ -20,7 +20,7 @@
     font-weight: 200;
   }
 
-  &--18 {
+  &-18 {
     &--bold {
       font-weight: 700;
     }
@@ -28,7 +28,7 @@
     font-weight: 300;
   }
 
-  &--20 {
+  &-20 {
     &--bold {
       font-weight: 700;
     }
@@ -36,7 +36,7 @@
     font-weight: 300;
   }
 
-  &--36 {
+  &-36 {
     &--bold {
       font-weight: 700;
     }
