--- a/assets/style/typography.scss
+++ b/assets/style/typography.scss
@@ -1,3 +1,5 @@
+@use "assets/style/breakpoints";
+
 .typography {
   font-family: "Raleway", sans-serif;
   font-style: normal;
@@ -10,6 +12,9 @@
     }
     font-size: 14px;
     font-weight: 300;
+    @include breakpoints.media(mobile) {
+        font-size: 12px;
+      }
   }
 
   &-16 {
@@ -18,6 +23,9 @@
     }
     font-size: 16px;
     font-weight: 300;
+    @include breakpoints.media(mobile) {
+      font-size: 14px;
+    }
   }
 
   &-18 {
@@ -26,6 +34,9 @@
     }
     font-size: 18px;
     font-weight: 300;
+    @include breakpoints.media(mobile) {
+      font-size: 16px;
+    }
   }
 
   &-20 {
@@ -34,6 +45,9 @@
     }
     font-size: 20px;
     font-weight: 300;
+    @include breakpoints.media(mobile) {
+      font-size: 18px;
+    }
   }
 
   &-36 {
@@ -42,7 +56,8 @@
     }
     font-size: 36px;
     font-weight: 300;
+    @include breakpoints.media(mobile) {
+      font-size: 24px;
+    }
   }
-
-
 }
